<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_auth"
    android:background="#DBA400"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="baa.shoppinglist.AuthActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:id="@+id/userEmail"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:ems="10"
        android:id="@+id/userPassword"
        android:layout_below="@+id/userEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <Button
        android:text="@string/btn_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SignMe"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/userPassword"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_RegisterMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterMe"
        android:layout_below="@+id/SignMe"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />
</RelativeLayout>
