<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBA400"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="baa.shoppinglist.AddItem">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/additem"
        android:ems="10"
        android:id="@+id/newItemName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword|number"
        android:hint="@string/enter_quantity"
        android:ems="10"
        android:layout_below="@+id/newItemName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:id="@+id/newQty" />

    <Button
        android:text="@string/btn_additem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/saveNow"
        android:layout_below="@+id/newQty"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
